add component folders

--- a/web.browser/src/containers/App/styles.css
+++ b/web.browser/src/containers/App/styles.css
@@ -4,18 +4,6 @@
   width: 100vw;
 }
 
-/*button span {
-  color: white;
-}*/
-
-.muidocs-icon-navigation-expand-more button {
-  color: white;
-}
-
-.REDit-icon {
-  color: white;
-}
-
-.header-icon {
+button span {
   color: white;
 }
